# qnltk

./: README.md  pyproject.toml
examples/: entailment_example.py  interpretability_demo.py  sentiment_quickstart.py
quantumlinguist/: __init__.py  analysis.py  benchmark.py  compiler.py  encoding.py  models.py  noise.py  parser.py  trainer.py
quantumlinguist/data/: compositional_dataset.json
