[build-system]
requires = ["setuptools>=68", "wheel"]
build_backend = "setuptools.build_meta"

[project]
name = "quantumlinguist"
version = "0.1.0"
description = "Grammar-driven hybrid quantum-classical NLP research library"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
keywords = ["quantum", "nlp", "qnlp", "pennylane", "nltk", "quantum-machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pennylane>=0.38.0",
    "torch>=2.2.0",
    "nltk>=3.8.1",
    "transformers>=4.40.0",
    "spacy>=3.7.0",
    "networkx>=3.3",
    "numpy>=1.26.0",
    "scipy>=1.13.0",
    "scikit-learn>=1.4.0",
    "datasets>=2.19.0",
]

[project.optional-dependencies]
gpu = ["pennylane-lightning[gpu]"]
dev = ["pytest>=8.0.0", "black", "isort", "mypy"]

[project.urls]
Homepage = "https://github.com/yourusername/quantumlinguist"
Documentation = "https://quantumlinguist.readthedocs.io"

[tool.setuptools.packages.find]
where = ["."]
include = ["quantumlinguist*"]

[tool.setuptools.package-data]
quantumlinguist = ["data/*.json"]
